Fixed homepage on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -1,21 +1,28 @@
-html, body {
-    height: initial;
+html {
+    height: 100%;
 }
-
 body {
-    display: flex;
+    height: 100%;
+    font-size: 16px;
+}
+*, *:before, *:after {
+    box-sizing: border-box;
 }
 
+#root {
+    width: 100%;
+    height: 100%;
+}
 main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 48px;
 
+    height: 100%;
     margin: 0px auto 0px auto;
     padding: 20px;
     max-width: 1260px;
-    flex: 1;
 }
 
 .page-content {
@@ -63,6 +70,7 @@ footer {
 
 .motto-gradient {
     background: -webkit-linear-gradient(-90deg, var(--primary-color), var(--secondary-color));
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -86,6 +94,7 @@ header {
 h1, h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
+    overflow-wrap: anywhere;
 }
 h1 {
     font-size: 60px;
